--- a/OsakaMetro/WebContent/midosuji.html
+++ b/OsakaMetro/WebContent/midosuji.html
@@ -14,6 +14,6 @@
 <h3>北大阪急行所有車両</h3>
 <a href="m8000.html">8000系</a><br>
 <a href="m9000.html">9000系</a><br>
-<script src="complete.js"
+<script src="complete.js"></script>
 </body>
 </html>
